--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ examples/HelloWorld/wasi-build
 examples/HelloWorld/package-lock.json
 examples/UMD/package-lock.json
 examples/Webpack/package-lock.json
+examples/Webpack/cypress/videos/
 
 test/MedianFilterPipeline/itk-wasm
 test/pipelines/MedianFilterPipeline/web-build
