--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
     "@npmcli/promise-spawn": "^2.0.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/estree": "0.0.50",
     "@types/mime-types": "^2.1.1",
+    "@wasmer/wasm-terminal": "^0.12.0",
+    "@wasmer/wasm-transformer": "^0.12.0",
     "assert": "^2.0.0",
     "async": "^3.2.1",
     "ava": "^3.15.0",
@@ -90,6 +92,7 @@
     "cz-conventional-changelog": "2.1.0",
     "file-api": "^0.10.4",
     "glob": "^7.1.6",
+    "http-server": "^14.1.1",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-tap": "^4.2.0",
@@ -101,10 +104,11 @@
     "process": "^0.11.10",
     "puppeteer": "^10.4.0",
     "readable-stream": "^3.6.0",
-    "rollup": "^2.58.0",
+    "rollup": "^2.75.7",
     "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^19.0.2",
     "standard": "^16.0.4",
+    "start-server-and-test": "^1.14.0",
     "stream-browserify": "^3.0.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.13.0",
