--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "build:wasi": "pnpm -r build:wasi",
     "build:wasi:debug": "pnpm -r build:wasi:debug",
     "test:wasi": "pnpm -r test:wasi",
+    "test:lint": "pnpm -r test:lint",
     "test:node": "pnpm -r test:node",
     "test:browser:chrome": "pnpm -r test:browser:chrome",
     "test:browser:firefox": "pnpm -r test:browser:firefox",
+    "test:python:wasi": "pnpm -r test:python:wasi",
+    "test:python:emscripten": "pnpm -r test:python:emscripten",
     "test:python": "pnpm -r test:python",
     "test": "pnpm -r test",
     "clean": "git clean -fdx",
